--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                     <li>Ingresar la N cantidad de focos</li>
                     <li>Seleccionar color</li>
                     <li>Repetir N cantidad de veces y comparar</li>
-                    <li>Comprar si es verde agregar a verde x cantidad</li>
-                    <li>Comprar si es blanco agregar a blanco x cantidad</li>
-                    <li>Comprar si es rojo agregar a rojo x cantidad</li>
+                    <li>Comparar si es verde agregar a verde x cantidad</li>
+                    <li>Comparar si es blanco agregar a blanco x cantidad</li>
+                    <li>Comparar si es rojo agregar a rojo x cantidad</li>
                     <li>Mostras en consola verde, blanco y rojo</li>
                 </ul>
             </div>
