Modified index.html error gramatical

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <li>Comparar si es verde agregar a verde x cantidad</li>
                     <li>Comparar si es blanco agregar a blanco x cantidad</li>
                     <li>Comparar si es rojo agregar a rojo x cantidad</li>
-                    <li>Mostras en consola verde, blanco y rojo</li>
+                    <li>Mostras en consola cantidad de verde, blanco y rojo</li>
                 </ul>
             </div>
             <div>
