Modified index.html correcion

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <li>Ingresar edad</li>
                     <li>Compara si edad es mayo o igual que 18</li>
                     <li>Si edad es mayor o igual que 18 mostrar que si puede votar</li>
-                    <li>Si edad no es mayor o igual que 18 mostrar que no puede votar</li>
+                    <li>De lo contrario mostrar que no puede votar</li>
                 </ul>
             </div>
         </section>
